# certior-guard

./: .gitignore  README.md  index.js  netlify.toml  package.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
certior_guard/: __init__.py  capabilities.py  check.py  cli.py  config.py  demo.py  detect.py  engine.py  hook.py  init_wizard.py  patterns.py  profiles.py  receipts.py  shell_parse.py  verify.py
examples/: demo.sh
hooks/: hooks.json  run.js  run.py
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
site/: index.html
src/: capabilities.js  check.js  cli.js  colors.js  config.js  demo.js  detect.js  engine.js  glob.js  hook.js  initWizard.js  patterns.js  profiles.js  receipts.js  shellParse.js  verify.js
test/: decisions.test.js
tests/: test_decisions.py
