[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "certior-guard"
version = "0.1.0"
description = "Safe defaults for Claude Code: block secrets & dangerous commands, ask before deploys/migrations, log every decision."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Certior", email = "hello@certior.io" }]
keywords = ["claude-code", "security", "guardrail", "policy", "agent", "safety", "hook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
# Zero runtime dependencies — pure stdlib, so it installs in seconds and cannot
# conflict with your project's packages.
dependencies = []

[project.urls]
Homepage = "https://certior.io"
Repository = "https://github.com/certior/certior-guard"

[project.scripts]
certior-guard = "certior_guard.cli:main"

[tool.setuptools.packages.find]
include = ["certior_guard", "certior_guard.*"]
